--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   <header>
     <h1>Hello, I'm Rishitha Madaraboina</h1>
     <p>Passionate IT student exploring development, innovation, and impactful tech solutions</p>
-    <a href="https://drive.google.com/file/d/10F8k2kxCCYzzvgVibL_Owh_tCbvFIjLq/view?usp=sharing" class="btn-resume" target="_blank">My Resume</a>
+    <a href="https://drive.google.com/drive/u/0/my-drive?usp=sharing" class="btn-resume" target="_blank">My Resume</a>
   </header>
 
   <nav>
