--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <header>
     <h1>Hello, I'm Rishitha Madaraboina</h1>
     <p>Passionate IT student exploring development, innovation, and impactful tech solutions</p>
-    <a href="https://drive.google.com/file/d/16y5IiK6ZAUDrf0qAZBfC0WOr-x9q9lzC/view?usp=drive_link?usp=sharing" class="btn-resume" target="_blank">My Resume</a>
+    <a href="https://drive.google.com/drive/u/0/my-drive?usp=sharing" class="btn-resume" target="_blank">My Resume</a>
   </header>
 
   <nav>
