--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <header>
     <h1>Hello, I'm Rishitha Madaraboina</h1>
     <p>Passionate IT student exploring development, innovation, and impactful tech solutions</p>
-    <a href="https://drive.google.com/drive/u/0/my-drive/view?usp=sharing" class="btn-resume" target="_blank">My Resume</a>
+    <a href="https://drive.google.com/file/d/1x8AG1ZYesyHCSMYTUxpFuFDxM_ygMHTd/view?usp=sharing" class="btn-resume" target="_blank">My Resume</a>
   </header>
 
   <nav>
@@ -177,6 +177,7 @@
     <a href="#skills">Skills</a>
     <a href="#projects">Projects</a>
     <a href="#certifications">Certifications</a>
+    <a href="#training">Training</a>
     <a href="#contact">Contact</a>
   </nav>
 
@@ -245,6 +246,29 @@
     </div>
   </section>
 
+  <section id="training">
+    <h2>Training Experience</h2>
+    <div class="box">
+      <h3>The Singareni Collieries Company Limited (A Government Company)</h3>
+      <ul>
+        <li><strong>Certificate Ref:</strong> RG2/TT/2024/125</li>
+        <li><strong>Date:</strong> 21-06-2024</li>
+        <li><strong>Duration:</strong> 21.12.2023 – 15.06.2024</li>
+        <li><strong>Location:</strong> IT Department, General Manager Office, RG-II Area</li>
+        <li><strong>Institution:</strong> Singareni Collieries Polytechnic, CCC, Naspur</li>
+        <li><strong>Activities involved:</strong>
+          <ul>
+            <li>Troubleshooting of various computer components</li>
+            <li>Networking methods</li>
+            <li>CCTV cameras and related software</li>
+          </ul>
+        </li>
+        <li>Found to be punctual, hardworking, and inquisitive throughout the training</li>
+        <li><strong>Certificate:</strong> <a href="https://drive.google.com/file/d/1qZ9_-buaRdmezh_p8yhBBPDdyQ2pztTg/view?usp=sharing" target="_blank">View Certificate</a></li>
+      </ul>
+    </div>
+  </section>
+      
   <section id="contact">
     <h2>Contact</h2>
     <div class="grid">
@@ -266,6 +290,7 @@
   <footer>
     
   </footer>
+
 
 </body>
 </html>
